tests/ui/non-string.stderr
error: argument must be a single string literal
 --> $DIR/non-string.rs:6:12
  |
6 |     indoc!(64);
  |            ^^
